--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container text-center">
         <h1> Playground </h1>
+        <h5> Your playhround will appear here </h5>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
