--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container text-center">
         <h1> Playground </h1>
-        <h5> Your playhround will appear here </h5>
+        <h5> Your playhround will appear here shortly</h5>
+        <p> Built using python, jinja, HTML5, CSS, and Bootstrap</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
